--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,18 @@
 							<format>html</format>
 						</formats>
 					</coverage>
+					<cloudHubDeployment>
+						<uri>https://anypoint.mulesoft.com</uri>
+						<muleVersion>4.4.0</muleVersion>
+						<username>higodi2868</username>
+						<password>Uday3953@</password>
+						<workers>1</workers>
+						<workerType>MICRO</workerType>
+						<region>us-east-2</region>
+						<environment>Sandbox</environment>
+						<applicationName>bookmyholiday-prc-app</applicationName>
+						<objectStoreV2>true</objectStoreV2>
+					</cloudHubDeployment>
 				</configuration>
 			</plugin>
 		</plugins>
