--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 						<workerType>MICRO</workerType>
 						<region>us-east-2</region>
 						<environment>Sandbox</environment>
-						<applicationName>bookmyholiday-prc-app</applicationName>
+						<applicationName>stockMarket-prc-app</applicationName>
 						<objectStoreV2>true</objectStoreV2>
 					</cloudHubDeployment>
 				</configuration>
